# delidev

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.claude/: settings.json
.claude/commands/: work.md
.delidev/: config.toml
.delidev/setup/: Dockerfile
.github/workflows/: CI.yml  claude-code-review.yml  claude.yml  create-tag.yml  ios-testflight.yml  ios.yml  release.yml
apps/desktop/: .env.example  index.html  package.json  rsbuild.config.ts  tsconfig.json  vitest.config.ts
apps/desktop/src/: App.tsx  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.ios.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: config.rs  custom_commands.rs  license.rs  mod.rs  repositories.rs  repository_groups.rs  secrets.rs  server_mode.rs  system.rs  tasks.rs  update.rs  workspaces.rs
apps/desktop/src-tauri/src/config/: mod.rs
apps/desktop/src-tauri/src/database/: mod.rs  schema.rs
apps/desktop/src-tauri/src/entities/: agent.rs  config.rs  custom_command.rs  execution.rs  license.rs  mod.rs  plan.rs  repository.rs  repository_group.rs  task.rs  todo.rs  vcs.rs  workspace.rs
apps/desktop/src-tauri/src/services/: agent_execution.rs  app_state.rs  composite_planning.rs  concurrency.rs  config_watcher.rs  custom_command.rs  docker.rs  git.rs  license.rs  mod.rs  native_notification.rs  notification.rs  pr_management.rs  repository.rs  repository_group.rs  task.rs  update.rs  vcs.rs  workspace.rs  worktree_cleanup.rs
apps/desktop/src-tauri/src/single_process/: config.rs  embedded_server.rs  embedded_worker.rs  mod.rs
apps/desktop/src/__tests__/: setup.ts
apps/desktop/src/api/: ClientProvider.tsx  client-config.ts  hooks.ts  index.ts  rpc.ts
apps/desktop/src/components/diff/: DiffViewer.tsx  LazyFileDiff.tsx  ReviewSubmitDialog.tsx  index.ts
apps/desktop/src/components/execution/: StreamRenderer.tsx  TokenUsageCard.tsx  TtyInputDialog.tsx  index.ts
apps/desktop/src/components/graph/: TaskGraphVisualization.tsx  index.ts
apps/desktop/src/components/layout/: Layout.tsx  Sidebar.tsx  TabBar.tsx  TabContent.tsx  index.ts
apps/desktop/src/components/repositoryGroups/: CreateRepositoryGroupDialog.tsx  RepositoryGroupSelector.tsx  index.ts
apps/desktop/src/components/tasks/: CompositeTaskCard.tsx  CreateTaskDialog.tsx  KanbanBoard.tsx  RequestChangesDialog.tsx  TaskCard.tsx  TokenUsageCard.tsx  index.ts
apps/desktop/src/components/ui/: badge.tsx  button.tsx  checkbox.tsx  collapsible-text.tsx  command.tsx  dialog.tsx  file-autocomplete-textarea.tsx  index.ts  input.tsx  popover.tsx  premium-badge.tsx  select.tsx  textarea.tsx
apps/desktop/src/components/workspaces/: CreateWorkspaceDialog.tsx  WorkspaceSelector.tsx  index.ts
apps/desktop/src/hooks/: index.ts  useNotificationClickHandler.ts  useTabKeyboardShortcuts.ts  useTabNavigation.ts  useTabParams.ts
apps/desktop/src/lib/: utils.test.ts
apps/desktop/src/pages/: Chat.tsx  CompositeTaskDetail.tsx  Dashboard.tsx  ModeSelection.tsx  Onboarding.tsx  Repositories.tsx  RepositoryGroups.tsx  RepositorySettings.tsx  Settings.tsx  UnitTaskDetail.tsx  index.ts
apps/desktop/src/stores/: app.ts  config.test.ts  config.ts  index.ts  repositories.ts  repositoryGroups.ts  review.ts  tabs.test.ts  tabs.ts  tasks.test.ts  tasks.ts  workspaces.ts
apps/desktop/src/styles/: globals.css
apps/desktop/src/types/: index.ts
apps/main-server/: Cargo.toml
apps/main-server/src/: config.rs  error.rs  lib.rs  state.rs
apps/main-server/src/api/: auth.rs  mod.rs  repository.rs  secrets.rs  session.rs  task.rs  todo.rs  worker.rs  workspace.rs
apps/main-server/src/middleware/: auth.rs
apps/main-server/src/services/: worker_registry.rs
apps/server/: .env.example  Cargo.toml  package.json
apps/server/src/: auth_routes.rs  config.rs  lib.rs  log_broadcaster.rs  main.rs  middleware.rs  redis_broadcaster.rs  rpc.rs  sse.rs  state.rs  websocket.rs  worker_registry.rs
apps/tauri-app/src-tauri/: tauri.conf.json
apps/webapp/: AGENTS.md  package.json
apps/webapp/src/app/: globals.css
apps/webapp/src/app/api/: constants.ts
apps/webapp/src/app/api/generate-title-branch/: route.ts
apps/webapp/src/app/checkout/: route.ts
apps/webapp/src/app/checkout/license/: route.ts
apps/worker/: .env.example  Cargo.toml  package.json
apps/worker-server/: Cargo.toml
apps/worker/src/: config.rs  executor.rs  heartbeat.rs  lib.rs  main.rs  redis_publisher.rs  server_client.rs
crates/auth/: Cargo.toml
crates/auth/src/: error.rs  jwt.rs  lib.rs  oidc.rs  pkce.rs  state_store.rs  user.rs
crates/coding_agents/: Cargo.toml
crates/coding_agents/src/: agent.rs  docker.rs  lib.rs  output.rs  stream.rs  types.rs
crates/entities/: Cargo.toml
crates/entities/src/: agent.rs  lib.rs  task.rs  todo.rs  tty.rs  user.rs  workspace.rs
crates/git_ops/: Cargo.toml
crates/git_ops/src/: branch.rs  diff.rs  error.rs  lib.rs  mobile_stub.rs  remote.rs  repository.rs  worktree.rs
crates/rpc_protocol/: Cargo.toml
crates/rpc_protocol/proto/: delidev.proto
crates/rpc_protocol/src/: error.rs  lib.rs  methods.rs  requests.rs  responses.rs  types.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: env.rs  error.rs  keychain.rs  keychain_keyring.rs  keychain_macos.rs  keys.rs  lib.rs  transport.rs
crates/task_store/: Cargo.toml
crates/task_store/src/: entities.rs  error.rs  lib.rs  memory.rs  store.rs  traits.rs
docs/: client-local-vs-remote.md  design.md  ios-testflight-setup.md  main-server.md  plan-yaml.md  server-architecture.md  tauri-app.md  ui.md  worker-server.md
