[package]
name = "delidev-server"
version = "0.1.0"
edition = "2021"
description = "DeliDev Main Server - Task management and worker coordination"
license = "MIT"
publish = false

[dependencies]
# Shared crates
task_store = { path = "../../crates/task_store" }
rpc_protocol = { path = "../../crates/rpc_protocol" }
auth = { path = "../../crates/auth", features = ["sqlx"] }
coding_agents = { path = "../../crates/coding_agents" }
secrets = { path = "../../crates/secrets" }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "chrono"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client (for OIDC)
reqwest = { version = "0.12", features = ["json"] }

# URL parsing
url = "2"

# Configuration
toml = "0.8"
dotenvy = "0.15"
dirs = "6"

# CPU count
num_cpus = "1"

# Graceful shutdown
tokio-util = { version = "0.7" }

# Futures
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"
