[package]
name = "delidev-worker"
version = "0.1.0"
edition = "2021"
description = "DeliDev Worker Server - AI agent execution and task processing"
license = "MIT"
publish = false

[dependencies]
# Shared crates
coding_agents = { path = "../../crates/coding_agents" }
rpc_protocol = { path = "../../crates/rpc_protocol" }
task_store = { path = "../../crates/task_store" }
git_ops = { path = "../../crates/git_ops" }
secrets = { path = "../../crates/secrets" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
toml = "0.8"
dotenvy = "0.15"

# System info
sysinfo = "0.33"

# Directories
dirs = "6"

# CPU count
num_cpus = "1"

# Redis (for event streaming - publishing logs directly to Redis)
redis = { version = "0.27", features = ["tokio-comp", "aio", "connection-manager"] }

[dev-dependencies]
tokio-test = "0.4"
