[package]
name = "auth"
version = "0.1.0"
edition = "2021"
description = "Authentication and authorization for DeliDev"

[features]
default = []
sqlx = ["dep:sqlx"]

[dependencies]
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "chrono"], optional = true }
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
tokio-test = "0.4"
