[package]
name = "rpc_protocol"
version = "0.1.0"
edition = "2021"
description = "JSON-RPC protocol definitions for DeliDev server/client communication"

[dependencies]
coding_agents = { path = "../coding_agents" }
task_store = { path = "../task_store" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
