[package]
name = "secrets"
version = "0.1.0"
edition = "2021"
description = "Secret management for DeliDev including keychain access"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

# Platform-specific keychain access
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = "3"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = "3"

[dev-dependencies]
tokio-test = "0.4"
