[package]
name = "task_store"
version = "0.1.0"
edition = "2021"
description = "Task storage and management for DeliDev"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
coding_agents = { path = "../coding_agents" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "chrono"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
