[package]
name = "delidev"
version = "0.0.3"
description = "Local-first AI Agent Orchestrator"
authors = ["Delino"]
license = "Apache-2.0"
repository = ""
edition = "2021"
publish = false

[lib]
name = "delidev_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-process = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Docker API
bollard = "0.18"
futures-util = "0.3"
tar = "0.4"

# Git operations
git2 = "0.19"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Random number generation
rand = "0.8"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Configuration
toml = "0.8"
dirs = "6"

# Error handling
thiserror = "2"
anyhow = "1"

# Regex for sanitization
regex = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2.180"

# File watching
notify = "8"
notify-debouncer-mini = "0.7"

# Hostname detection
hostname = "0.4"

# ANSI escape code stripping
strip-ansi-escapes = "0.2"

# Error tracking
sentry = "0.35"
sentry-tracing = "0.35"

# Single process mode: embedded server and RPC
delidev-server = { path = "../../server" }
rpc_protocol = { path = "../../../crates/rpc_protocol" }
task_store = { path = "../../../crates/task_store" }

# Secrets management
secrets = { path = "../../../crates/secrets" }

# Native notification support with click handlers
[target.'cfg(target_os = "windows")'.dependencies]
tauri-winrt-notification = "0.7"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
